override issue solved overlapping (price) solved

--- a/Staff/business-analytics-staff/style.css
+++ b/Staff/business-analytics-staff/style.css
@@ -1,4 +1,9 @@
 /* business-analytics.css */
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     background: #fff;
     color: #111;
@@ -7,6 +12,12 @@ body {
 
 #navbar>a:nth-of-type(2)>.navbarItem {
     background-color: rgb(216, 216, 216);
+}
+
+#navbar>a:nth-child(5) {
+    position: absolute;
+    top: auto;
+    bottom: 10px;
 }
 
 @media screen and (min-width: 769px) {
@@ -31,6 +42,7 @@ body {
 
 .content-wrapper {
     max-width: 960px;
+    margin: 0 auto;
 }
 
 .page-title {
@@ -200,10 +212,6 @@ tr:hover td {
 }
 
 @media screen and (max-width: 768px) {
-    .content-wrapper {
-        max-width: 100%;
-    }
-
     .chart-controls {
         flex-direction: column;
         align-items: stretch;
